--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
             jni.srcDirs = [] // disbble automatic ndk-build call; ndk-build.cmd musi byc wywolane z lini polecen
             jniLibs.srcDir 'src/main/libs' // set .so files location to libs
         }
+        //call regular ndk-build (.cmd) script from app directory
         task ndkBuild(type: Exec) {
             if (Os.isFamily(Os.FAMILY_WINDOWS)) {
                 commandLine 'cmd ', 'ndk-build.cmd', '-C', file('src/main/jni').absolutePath
